# Nexora

./: .dockerignore  .env.example  .gitignore  README.md  chainlit_app.py  compose.yaml  pyproject.toml
.chainlit/: config.toml
.chainlit/translations/: en-US.json
.superpowers/sdd/: react-ui-task-1-report.md  react-ui-task-2-3-report.md  task-1-report.md  task-4-report.md  task-5-report.md  task-6-report.md
alembic/versions/: 001_initial_domain.py  002_documents_and_jobs.py  003_ingestion_metadata.py  004_chats_and_citations.py  005_chat_sessions.py  006_workspace_management.py
app/: __init__.py  chainlit_client.py
app/api/: deps.py  main.py
app/api/routers/: account_page.py  auth.py  chat.py  documents.py  sessions.py  workspaces.py
app/core/: config.py  observability.py  security.py
app/db/: models.py  session.py
app/rag/: __init__.py  graph.py  nodes.py  prompts.py
app/schemas/: auth.py  chat.py  document.py  workspace.py
app/services/: auth.py  chunking.py  citations.py  csv_analysis.py  jobs.py  parsers.py  storage.py  vector_store.py  workspaces.py
docs/superpowers/plans/: 2026-07-20-local-workspace-rag-mvp.md  2026-07-21-auth-navigation-buttons.md  2026-07-21-auth-pages-visual-design.md  2026-07-21-chainlit-account-auth.md  2026-07-21-local-react-rag-ui.md  2026-07-22-document-readiness.md  2026-07-22-openai-inspired-workspace.md  2026-07-22-promote-worktree-to-root.md  2026-07-22-readme.md  2026-07-22-workspace-chat-routing.md  2026-07-22-workspace-management.md
docs/superpowers/specs/: 2026-07-20-local-workspace-rag-design.md  2026-07-21-auth-pages-visual-design.md  2026-07-21-chainlit-account-auth-design.md  2026-07-21-chat-scroll-region-design.md  2026-07-21-local-react-rag-ui-design.md  (+6 more)
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  styles.css
public/: auth-links.js  auth.css
scripts/: pull_models.sh  validate_env.py
tests/: conftest.py  test_chainlit_client.py  test_chainlit_ui.py  test_compose.py  test_config.py  test_entrypoints.py  test_health.py  test_migrations.py  test_validate_env.py  test_worker.py
tests/api/: conftest.py  test_auth.py  test_chat.py  test_csv_analysis.py  test_documents.py  test_sessions.py  test_workspaces.py
tests/rag/: test_chat_models.py  test_citations.py  test_csv_route.py  test_graph.py
tests/services/: test_auth.py  test_chunking.py  test_csv_analysis.py  test_jobs.py  test_parsers.py  test_storage.py  test_vector_store.py  test_workspaces.py
worker/: Dockerfile  main.py
(+13 files in other folders)
