[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "local-workspace-rag"
version = "0.1.0"
description = "Local-only workspace RAG MVP"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<0.116",
    "pydantic-settings>=2.5,<3",
    "uvicorn[standard]>=0.30,<1",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27,<1",
    "pytest>=8,<9",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
