[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "local-workspace-rag"
version = "0.1.0"
description = "Local-only workspace RAG MVP"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.13,<2",
    "chainlit>=2.6.3,<2.7",
    "fastapi>=0.115,<0.116",
    "minio>=7.2,<8",
    "pydantic-settings>=2.5,<3",
    "python-multipart>=0.0.9,<1",
    "pwdlib[argon2]>=0.2,<1",
    "psycopg[binary]>=3.2,<4",
    "PyJWT>=2.10,<3",
    "sniffio>=1.3,<2",
    "sqlalchemy>=2.0,<3",
    "uvicorn[standard]>=0.30,<1",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27,<1",
    "pytest>=8,<9",
]

[tool.setuptools]
py-modules = ["chainlit_app"]

[tool.setuptools.packages.find]
include = ["app*", "worker*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
