[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "local-workspace-rag"
version = "0.1.0"
description = "Local-only workspace RAG MVP"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.13,<2",
    "asyncpg>=0.30,<1",
    "chainlit>=2.6.3,<2.7",
    "fastapi>=0.115,<0.116",
    "langchain-ollama>=0.3,<1",
    "minio>=7.2,<8",
    "pandas>=2.2,<3",
    "pillow>=11,<12",
    "pydantic-settings>=2.5,<3",
    "pypdf>=5,<6",
    "pypdfium2>=4.30,<5",
    "pytesseract>=0.3.13,<1",
    "python-multipart>=0.0.9,<1",
    "python-docx>=1.1,<2",
    "pwdlib[argon2]>=0.2,<1",
    "psycopg[binary]>=3.2,<4",
    "PyJWT>=2.10,<3",
    "qdrant-client>=1.13,<2",
    "sniffio>=1.3,<2",
    "sqlalchemy>=2.0,<3",
    "tokenizers>=0.20,<1",
    "uvicorn[standard]>=0.30,<1",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27,<1",
    "pytest>=8,<9",
    "reportlab>=4,<5",
]

[tool.setuptools]
py-modules = ["chainlit_app"]

[tool.setuptools.packages.find]
include = ["app*", "worker*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
